# MeshCanvas

./: .gitignore  CLAUDE.md  PRODUCT_MANUAL.md  README.md  models_setting.example.json  pyproject.toml
app/: auth.py  bootstrap_admin.py  captcha.py  chat_service.py  config.py  database.py  dependencies.py  deps.py  init_db.py  llm_client.py  main.py  request_logger.py  search_service.py  security.py
app/core/: config.py  exceptions.py  middleware.py  prompts.py  request_logger.py  security.py
app/models/: chat.py  search.py
app/repositories/: base.py  canvas_repo.py  chat_repo.py  event_repo.py  session_repo.py  user_repo.py
app/routers/: admin.py  analysis.py  auth.py  canvas.py  chat_ws.py  models.py  pages.py  settings.py  setup.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  canvas.py  models.py  setup.py  user.py
app/services/: analysis_service.py  auth_service.py  chat_service.py  history_utils.py  llm_client_factory.py  search_service.py  thread_builder.py
app/static/: app.js  auth.js  index.html  landing.css  landing.html  landing.js  login.html  markdown.js  settings.html  settings.js  setup.html  setup.js  styles.css  test-grid-bg.html
app/static/admin/: admin.css  admin.js  dashboard.html  login.js
app/static/js/: app.js  canvas.js  clusters.js  edges.js  nodes.js  selection.js  sidebar.js  state.js  utils.js  websocket.js
app/templates/: admin_login.html
docs/: feature-guide.md  model-card-blank-analysis.md  product-manual.md
landing_page_demo/: index.html
tests/: conftest.py  test_admin_write.py  test_api.py  test_auth.py  test_canvas.py  test_captcha.py  test_schemas.py  test_user.py
