[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobob"
version = "0.1.0"
description = "NanoBob — next-gen AI workbench with infinite canvas and roundtable forum for multi-model concurrent dialogue."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27",
  "openai>=1.30.0",
  "anthropic>=0.34.0",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[tool.uvicorn]
factory = false

[tool.setuptools]
packages = ["app"]
